# quote-creator

./: .gitignore  consts.py  main.py  models.py  pyproject.toml  quote.py  quotes.json  render.py  test.py  upload.py  video.py
